2004-07-22      blytkerchan
	* module.mk: update
	* array.c (array_get)[size]: remove, use array->size
	(array_get)[size]: ditto
	(array_condense)[size]: ditto
	(array_search)[size]: ditto
	(array_put)[size]: ditto
	[increase]: remove
	(array_copy): use array_new in stead of new_array
	(array_merge1): ditto
	(array_deep_copy): ditto
	(array_sort_worker): use array_free in stead of free_array
	* heap.c: change all calls to atomic_increment and atomic_decrement to
	cast their parameter to uint32_t*

2004-07-21	blytkerchan
	* Hash.cc:  type-case parameters for all calls to atomic_increment and
	atomic_decrement

2004-07-20	blytkerchan
	* vector.h: s/array/vector/g
	s/ARRAY/VECTOR/g
	s/Array/Vector/g
	* vector.c: ditto

	* module.mk: use support for conditionally compiled files - don't try
	using the automake method

	* module.mk: new file
	* stack.c: don't use already-installed libmemory headers for compile

2004-07-18	blytkerchan
	* Makefile.am: don't compile stuff in test
	* array.h (array_put): fix prototype

	* Makefile.am: prepare for use with new src tree

2004-07-17	blytkerchan
	* vector.c: new file
	* vector.h: ditto
	* array.c: remove resize()
	* array.h: ditto

2004-07-16	blytkerchan
	* version: new file
	* bootstap: removed
	* configure.in: ditto

	* singleton.cc: new file
	* singleton.h: ditto

2004-05-11	blytkerchan	make libmemory optional for compilation (parent might have it)
	* Makefile.am [HAVE_LIBMEMORY]: new conditional
	[DIST_SUBDIRS]: conditionally add libmemory
	[libcontain_la_LIBADD]: conditionally search for libmemory in parent dir
	[AM_CXXFLAGS]: remove arch/include, add $(top_srcdir)
	* configure.in: check that libmemory is in this dir. define automake conditional HAVE_LIBMEMORY accordingly
	re-indent

add missing files..
	* types.h: new file

start implementing list-based hash
	* hash.c: include libmemory headers
	(hash_node_new): new function
	(hash_node_free): ditto
	(hash_node_cmp): ditto
	(hash_new): take new parameter n_buckets