@@ -1,70 +1,0 @@
-/* Jail: Just Another Interpreted Language
- * Copyright (c) 2003-2004, Ronald Landheer-Cieslak
- * All rights reserved
- * 
- * This is free software. You may distribute it and/or modify it and
- * distribute modified forms provided that the following terms are met:
- *
- * * Redistributions of the source code must retain the above copyright
- *   notice, this list of conditions and the following disclaimer;
- * * Redistributions in binary form must reproduce the above copyright
- *   notice, this list of conditions and the following disclaimer in
- *   the documentation and/or other materials provided with the distribution;
- * * None of the names of the authors of this software may be used to endorse
- *   or promote this software, derived software or any distribution of this 
- *   software or any distribution of which this software is part, without 
- *   prior written permission from the authors involved;
- * * Unless you have received a written statement from Ronald Landheer-Cieslak
- *   that says otherwise, the terms of the GNU General Public License, as 
- *   published by the Free Software Foundation, version 2 or (at your option)
- *   any later version, also apply.
- * 
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
- * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
- * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
- * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
- * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
- * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
- * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
- * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
- * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
- * POSSIBILITY OF SUCH DAMAGE.
- */
-#include <sys/types.h>
-#include "binary.h"
-
-static size_t pow2s[] = { 
-	0x00000001, 0x00000002, 0x00000004, 0x00000008,
-	0x00000010, 0x00000020, 0x00000040, 0x00000080,
-	0x00000100, 0x00000200, 0x00000400, 0x00000800,
-	0x00001000, 0x00002000, 0x00004000, 0x00008000,
-	0x00010000, 0x00020000, 0x00040000, 0x00080000,
-	0x00100000, 0x00200000, 0x00400000, 0x00800000,
-	0x01000000, 0x02000000, 0x04000000, 0x08000000,
-	0x10000000, 0x20000000, 0x40000000, 0x80000000,
-};
-
-size_t lg(size_t n)
-{
-	size_t retval = 0;
-
-	while (pow2s[retval] < n)
-	{
-		retval++;
-		if (retval >= 32)
-			return ~0;
-	}
-
-	if (pow2s[retval] != n)
-		return retval - 1;
-	return retval;
-}
-
-size_t pow2(size_t n)
-{
-	if (n >= 32)
-		return ~0;
-	else
-		return pow2s[n];
-}
