@@ -1,3 +1,8 @@
+2004-07-23	blytkerchan
+	* binary.c: move to libreplace
+	* binary.h: ditto
+	* module.mk: update
+
 2004-07-22      blytkerchan
 	* module.mk: update
 	* array.c (array_get)[size]: remove, use array->size
